# api_example

./: README.md  config.yaml  pyproject.toml  setup.cfg
app/: database.py  main.py
app/core/: stats.py  utils.py
app/endpoints/: stats.py
app/models/: stats.py
app/schemas/: stats.py
tests/unit/: test_dull.py
